--- a/style.css
+++ b/style.css
@@ -8,19 +8,106 @@
   text-decoration: none;
   list-style:none ;
   scroll-behavior: smooth;
- font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 :root{
-  --main-color:#008148;
-  --second-color:#1e3932;
+  --main-color:#C56E33;
+  --second-color:#012f2d;
 }
 
 section{
   padding:50px 10%;
 }
 
+*::selection{
+  color:#fff;
+  background: var(--main-color);
+}
+
 img{
   width:100%;
 }
+
+header{
+  position: fixed;
+  width: 100%;
+  top:0;
+  z-index:1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background:white ;
+  box-shadow: 0 4px 41px rgb(14 55 54 / 14%);
+  padding: 15px 10%;
+  transition: 0.2s ;
+}
+
+.logo{
+  display: flex;
+  align-items:center ;
+}
+
+.logo img{
+  width: 150px;
+}
+
+.navbar{
+  display: flex;
+}
+
+.navbar a{
+  font-size: 1rem;
+  padding: 11px 20px;
+  color:var(--second-color) ;
+  font-weight:600;
+  text-transform:uppercase;
+}
+
+.navbar a:hover{
+  color:var(--main-color)
+}
+
+#menu-icon{
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1001;
+  display: none;
+}
+
+.home{
+  border: 3px solid var(--main-color);
+  width: 100%;
+  min-height:70vh;
+  display:flex;
+  flex-wrap: wrap;
+  align-items: center;
+  background: #ebdbc8;
+  gap:1rem;
+}
+
+.home-line{
+  margin: 100px 200px 100px 200px;
+  padding: 20px;
+  border: 4px solid var(--second-color);
+  width: 80%;
+  min-height:70vh;
+  display:flex;
+  flex-wrap: wrap;
+  align-items: center;
+  background: #ebdbc8;
+  gap:1rem;
+  
+}
+
+.home-text{
+  flex: 1 1 17 rem;
+  color:var(--second-color);
+}
+
+.home-img{
+  flex: 1 1 17rem ;
+}
+
+
 
