--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ header{
 }
 
 .home{
-  border: 3px solid var(--main-color);
+  border: 1px solid var(--main-color);
   width: 100%;
   min-height:70vh;
   display:flex;
@@ -89,7 +89,7 @@ header{
 .home-line{
   margin: 100px 200px 100px 200px;
   padding: 20px;
-  border: 4px solid var(--second-color);
+  border: 2px solid var(--second-color);
   width: 80%;
   min-height:70vh;
   display:flex;
@@ -97,17 +97,65 @@ header{
   align-items: center;
   background: #ebdbc8;
   gap:1rem;
-  
 }
 
 .home-text{
   flex: 1 1 17 rem;
-  color:var(--second-color);
 }
 
 .home-img{
   flex: 1 1 17rem ;
 }
 
+
+.home-text span{
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight:600;
+  color: var(--second-color);
+}
+
+.home-text h1{
+  font-size: 2rem;
+  color: var(--main-color);
+  font-weight: bolder;
+}
+
+.home-text h2{
+  font-size:1.8rem;
+  font-weight: 600;
+  color:var(--second-color);
+  text-transform: capitalize;
+  margin: 0.5rem 0 1.4rem;
+}
+
+.btn{
+  padding: 7px 16px;
+  border: 2px solid var(--second-color);
+  border-radius: 40px;
+  color: var(--second-color);
+  font-weight:500 ;  
+}
+
+.btn:hover{
+  color: #fff;
+  background: var(--second-color);
+}
+
+.heading{
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.heading span{
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--second-color);
+}
+
+.heading h1{
+  font-size: 2rem;
+  color:var(--main-color)
+}
 
 
