edit open time js function

--- a/style.css
+++ b/style.css
@@ -261,3 +261,21 @@ color: var(--second-color);
   font-weight: 300;
 }
 
+.store-container .openhour{
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  text-align:center;
+}
+
+.store-container .openhour h3{
+  margin: 15px;
+  color: var(--second-color);
+  font-weight: 300;
+}
+
+#store-status {
+  font-size: 1.2rem;
+}
+
+
