--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ header{
   color:var(--second-color) ;
   font-weight:600;
   text-transform:uppercase;
+  text-decoration: none;
 }
 
 .navbar a:hover{
@@ -257,12 +258,14 @@ color: var(--second-color);
 
 .store-container h2{
   color: var(--second-color);
+  font-size: 25px;
 }
 
 .store-container h3{
   margin: 15px;
   color: var(--second-color);
   font-weight: 300;
+  font-size: 20px;
 }
 
 .store-container .openhour{
