--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header{
   background:#fff ;
   box-shadow: 0 4px 41px rgb(14 55 54 / 14%);
   padding: 15px 10%;
-  transition: 0.2s ;
+
 }
 
 .logo{
@@ -53,12 +53,15 @@ header{
 }
 
 .navbar{
+  align-items: center;
   display: flex;
+  margin: 8px;
+
 }
 
 .navbar a{
   font-size: 1rem;
-  padding: 11px 20px;
+  padding: 8px 15px;
   color:var(--second-color) ;
   font-weight:600;
   text-transform:uppercase;
@@ -319,6 +322,7 @@ color: var(--second-color);
   margin-top:20px;
   margin-right: 20px;
   text-align: center;
+  font-size: 20px;
 }
 
 .about-text-1 {
@@ -333,6 +337,7 @@ color: var(--second-color);
   margin-top:20px;
   text-align: center;
   align-items: center;
+  font-size: 20px;
 }
 
 .about-container .about-text-2{
@@ -349,7 +354,7 @@ color: var(--second-color);
   margin-top:20px;
   text-align: center;
   align-items: center;
-
+  font-size: 20px;
 }
 
 .contact{
@@ -397,4 +402,26 @@ color: var(--second-color);
 .develope{
   margin-top: 100px;
   color: #C56E33;
+}
+
+
+.QA{
+  background-color: #ebdbc8;
+}
+
+#info-accordion-root {
+  margin: 20px auto;
+  padding: 10px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 80%;
+}
+
+.accordion-header {
+  color: grey!important; /* 更改字體顏色 */
+}
+
+.accordion-body {
+  color: var(--second-color); /* 更改字體顏色 */
 }
