--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ color: var(--second-color);
 .order{
   margin-bottom: 200px;
   scroll-margin-top: 80px;
+  text-align: center;
 }
 
 .store{
@@ -426,3 +427,8 @@ color: var(--second-color);
   width: 50%;
 }
 
+.form-header{
+  margin-top: 150px;
+  text-align: center;
+
+}
