added product details page

--- a/style.css
+++ b/style.css
@@ -472,15 +472,55 @@ color: var(--second-color);
   color: #ebdbc8;
 }
 
-.addToCart{
-  padding: 7px 16px;
-  border: 2px solid var(--second-color);
-  border-radius: 40px;
-  color: var(--second-color);
-  font-weight:500 ;  
+.prodoct-page {
+  margin-top: 250px;
+  display: flex; /* 确保子元素为弹性布局 */
+  flex-direction: row; /* 水平排列 */
+  align-items: center; /* 垂直居中对齐 */
+  justify-content: space-between; /* 子元素两端对齐 */
+  background-color: #C56E33;
 }
 
-.addToCart:hover{
-  color: #fff;
-  background: var(--second-color);
+.prodoct-page img{
+  flex: 1 1 17rem;
+  text-align: center;
+  height:600px ;
+  object-fit: contain;
+  width: 100%; 
 }
+
+.prodoct-container{
+  margin-top: 100px;
+  flex: 1 1 17rem;
+}
+
+.prodoct-container h1{
+  font-size: 30px;
+  color: white;
+  margin-bottom: 30px;
+}
+
+.prodoct-container p{
+  color: white;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 100%;  /* 让宽度占满父容器 */
+  max-width: 500px; /* 固定宽度 */
+  overflow: hidden; /* 控制超出部分不显示 */
+  padding: 20px; /* 内边距 */
+  background-color: rgba(0, 0, 0, 0.5); /* 设置背景色 */
+  border-radius: 10px; /* 可选：为 p 添加圆角 */
+  box-sizing: border-box; /* 确保 padding 不会影响元素的大小 */
+  line-height: 2.5; 
+  display: flex;
+  justify-content: center; /* 水平居中 */
+  align-items: center; /* 垂直居中 */
+}
+
+.prodoct-container li{
+  line-height: 1.8; 
+  color: var(--second-colo);
+}
+
+
+
